# MUFFIN_Release

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt  setup.py
PythonTools/: __init__.py  makeVideosTwoFluid.py  plotResults.py
Regression_tests_Euler/: .gitignore  Euler_FirstOrder.py  Euler_tests.py  README  Regression_tests.py  Tutorial.ipynb
conda/: environment.yml
notebooks/: Argon_MaxwellianRates.ipynb  Argon_Metastables_Rate_Fit_and_Conditions.ipynb  Iodine_Rate_Fit_and_Conditions.ipynb  MultiFluidEnergySheath.ipynb  MultiFluidIsothermalSheath.ipynb  Test.py  ThreeFluidIsothermalSheath.ipynb  Tutorial.ipynb  Tutorial_Zoubair.py  Tutorial_advection.ipynb  Xenon_Rate_Fit_and_Conditions.ipynb  e_Ar_4s_test.txt  e_Ar_Metastables.txt  script_open_session.command  test_Euler.py
notebooks/.ipynb_checkpoints/: Argon_Metastables_Rate_Fit_and_Conditions-checkpoint.ipynb  Argon_Rate_Fit_and_Conditions-checkpoint.ipynb  Iodine_Rate_Fit_and_Conditions-checkpoint.ipynb  IonMoments_Anatole-checkpoint.ipynb  MultiFluidIsothermalSheath-checkpoint.ipynb  ThreeFluidIsothermalSheath-checkpoint.ipynb  Tutorial-checkpoint.ipynb  Xenon_Rate_Fit_and_Conditions-checkpoint.ipynb
src/: Component.hpp  Configuration.cpp  Configuration.hpp  Options.hpp  Parameters.cpp  Parameters.hpp  Simulation.cpp  Simulation.hpp  Simulation1D.cpp  Simulation1D.hpp  Solver.cpp
src/BoundaryCondition/: BoundaryCondition.cpp  BoundaryCondition.hpp  BoundaryConditionFactory.cpp  BoundaryConditionFactory.hpp  BoundaryConditionRegistrar.hpp  DirichletBC.cpp  DirichletBC.hpp  MPIInletBC.cpp  (+15 more)
(+179 files in other folders)
